# repo_finder

./: .gitignore  AGENTS.md  README.md  kilo.jsonc  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
.kilo/agents/: ask.md
.kilo/plans/: 1777234050911-calm-lagoon.md
.kilo/rules/: 30-ask-agent.md
docs/: architecture.md  assessment-report-review.md  complexity-budget.md  development-notes.md  requirements.md  source-scout-direction.md
evals/golden/: assessment_smoke_v1.json  local_explore_ernaering_v1.json  local_explore_repo_finder_v1.json  local_explore_source_scout_v1.json  personal_code_v1.json
scripts/: run_quality_checks.py
src/repo_finder/: __main__.py  cache.py  catalog.py  cloner.py  constants.py  fastcontext.py  language_patterns.py  lmstudio.py  local_explore_eval.py  models.py  profiler.py  server.py  urls.py
src/source_scout/: __init__.py  __main__.py  assessment_eval.py  assessment_rules.py  assessor.py  (+28 more)
tests/: fastcontext_helpers.py  test_assessment_eval.py  test_assessment_rules.py  test_assessor.py  test_cache.py  test_catalog_ui_reuse.py  test_check_cli.py  test_cloner.py  test_deep_inspect.py  test_eval_runner.py  test_evidence_ledger.py  test_fastcontext.py  test_fastcontext_cli.py  test_fastcontext_local_explore.py  test_fastcontext_loop.py  test_fastcontext_refinement.py  test_fastcontext_tools.py  test_github_client.py  test_integration.py  test_lmstudio.py  test_local_explore_eval.py  test_mcp_driven.py  test_pattern_extractor.py  test_ranker.py  test_repo_inspector.py  test_reuse_assessments.py  test_server.py
(+2 files in other folders)
